Added small description

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = tspec
-summary = Add a short description here!
+summary = A simple Python module that allows the user to create QC-compatible test specifications.
 author = João Galego
 author-email = jgalego1990@gmail.com
 license = none
